--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -10,7 +10,7 @@
 
     <form action="/update/<%= note.id %>" method="POST">
       <input type="text" name="note" id="note" value="<%= note.note %>" />
-      <input type="submit" value="Edit note" />
+      <input type="submit" value="Save Changes" />
     </form>
   </body>
 </html>
